# xregrid

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  EXAMPLES.md  README.md  build_docs.sh  environment.yml  mkdocs.yml  pyproject.toml  requirements-docs.txt  verify_user_script.py  xregrid_other.py  zensical.toml
.github/workflows/: ci.yml  docs.yml
benchmarks/: real_benchmark.py
docs/: index.md  installation.md
docs/api/: regridder.md
docs/examples/: basic-regridding.md  conservative-regridding.md  performance-optimization.md  unstructured-grids.md
docs/examples/scripts/: README.md  plot_basic_regridding.py  plot_conservative_regridding.py  plot_esmpy_comparison.py  plot_performance_optimization.py  plot_unstructured_grids.py  regrid_visualization.py
docs/stylesheets/: extra.css
docs/user-guide/: performance.md  quickstart.md
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/regridder/: index.html
site/examples/: index.html
site/examples/auto_examples/: plot_basic_regridding.ipynb  plot_basic_regridding.py  plot_basic_regridding.py.md5  plot_basic_regridding_codeobj.pickle  plot_conservative_regridding.py
site/examples/basic-regridding/: index.html
slurm/: README.md  gaea_c5.sl  gaea_c6.sl  hera.sl  jet.sl
src/xregrid/: __init__.py  accessors.py  core.py  grid.py  parallel.py  regridder.py  utils.py  viz.py  xregrid.py
tests/: conftest.py  test_aero_apply_weights.py  test_aero_coord_robustness.py  test_aero_crs_propagation.py  test_aero_diagnostics_extended.py  test_aero_distributed_opt.py  test_aero_enhancements_v2.py  test_aero_enhancements_v3.py  test_aero_hygiene.py  test_aero_lazy_diagnostics.py  test_aero_lazy_grids.py  test_aero_new_features.py  test_aero_optimization_v3.py  test_aero_parallel.py  test_aero_quality_lazy.py  test_aero_quality_report_opt.py  test_aero_regrid_robustness.py  test_aero_utils_lazy.py  test_aero_utils_new.py  test_aero_viz.py  test_aero_weight_loading.py  test_cf_xarray.py  test_dask_verification.py  test_large_grid_optim.py  test_monotonicity.py  test_mpi.py  test_performance_optim.py  test_persistence.py  test_real_esmpy_dask.py  test_regridder_coverage.py  test_toy_regrid.py  test_unstructured_dask.py  test_unstructured_dask_advanced.py  test_utils.py  test_utils_lazy.py  test_uxarray.py  test_validation.py  test_viz_coverage.py  test_xregrid.py
(+1 files in other folders)
