[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xregrid"
version = "0.1.0"
description = "An optimized ESMF-based regridder for xarray"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "xarray",
    "numpy",
    "scipy",
    "dask",
    "netCDF4",
    "esmpy",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-benchmark",
]
viz = [
    "matplotlib",
    "cartopy",
    "hvplot",
    "geoviews",
]
full = [
    "xregrid[test,viz]",
    "xesmf",
]

[tool.setuptools.packages.find]
where = ["src"]
